[gd_scene load_steps=12 format=3 uid="uid://ds2js8kmbdnu5"]

[ext_resource type="Script" path="res://scenes/home/background.gd" id="1_b5uaf"]
[ext_resource type="Texture2D" uid="uid://cgc7asuvr1um5" path="res://assets/img/default/placeholder.svg" id="2_fw8yn"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ofx2k"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 100, 0)
emission_shape_scale = Vector3(100, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(10, 1, 1)
gravity = Vector3(0, -2000, 0)
scale_min = 5.0
scale_max = 7.0
turbulence_enabled = true
turbulence_noise_scale = 1.0

[sub_resource type="Animation" id="Animation_cbcuj"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundHero:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackgroundHero2:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_hkg4h"]
resource_name = "change_background"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundHero:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2la0"]
_data = {
"RESET": SubResource("Animation_cbcuj"),
"fade_out": SubResource("Animation_hkg4h")
}

[sub_resource type="Animation" id="Animation_k1vjm"]
resource_name = "fade_out_2"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundHero2:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kt45j"]
_data = {
"fade_out_2": SubResource("Animation_k1vjm")
}

[sub_resource type="Animation" id="Animation_w2gd0"]
resource_name = "to_black"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundColorPanel:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.235294, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_vm7vb"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundColorPanel:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.235294, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jqub"]
_data = {
"RESET": SubResource("Animation_vm7vb"),
"to_black": SubResource("Animation_w2gd0")
}

[node name="Background" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b5uaf")

[node name="BackgroundHero2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fw8yn")
stretch_mode = 6

[node name="BackgroundHero" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fw8yn")
stretch_mode = 6

[node name="BackgroundColorPanel" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.235294)

[node name="Particles" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="GPUParticles2D" type="GPUParticles2D" parent="Particles"]
amount = 100
process_material = SubResource("ParticleProcessMaterial_ofx2k")
lifetime = 4.0
fixed_fps = 60
trail_lifetime = 1.73

[node name="BackgroundAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h2la0")
}

[node name="BackgroundAnimation2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kt45j")
}

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6jqub")
}

[connection signal="animation_finished" from="BackgroundAnimation" to="." method="_on_background_animation_animation_finished"]
[connection signal="animation_finished" from="BackgroundAnimation2" to="." method="_on_background_animation_2_animation_finished"]
